--- a/source/stylus/common.styl
+++ b/source/stylus/common.styl
@@ -1,6 +1,3 @@
-@import 'nib'
-@import "imports/settings"
-@import "imports/helpers"
-@import "imports/reset"
-@import "./../etc/*"
+@import "imports"
+@import 'phast/layout'
 @import "modules/*"
